Theme: fixes blockquote overflow

--- a/themes/type/src/css/components/content.styl
+++ b/themes/type/src/css/components/content.styl
@@ -38,6 +38,7 @@
     border-left: 2px solid $highlight-color
     font-style: italic
     padding-left: $gap-m
+    overflow: hidden
     overflow-x: scroll
     p:last-child
       margin 0
